    make little sense when working in a early compilation environment.

  - Stepper removed until we figure out how to implement this using
    the bytecodes.

  - The library function eval() now accepts an environment as a third
    parameter. On top of this function, SI:EVAL-WITH-ENV, evaluates
    a form on a given environment.

  - New accessor ROW-MAJOR-AREF.

* System design and portability:

  - Code has been revised so that it works in environments where stack
    grows upwards, as well as in environments where the parameters to
    a function cannot be accessed as an array and only va_list/va_arg
    work.

  - Implement loading of object files using the native "dlopen"
    function which is present in most operating systems. Support for
    "dld" has been dropped and the whole of the CRS library has been
    removed

  - Remove use of alloca() when printing circular structures.


ECLS 0.3b
=========

* Errors fixed:

  - Fixnum product would overflow: (* 65536 32768) => negative number.

  - Bit fiddling operations with negative fixnums now work (i.e.
    LOGAND, LOGOR, LOGBITP, etc).

TODO:
=====

* Selectively remove spices from read.d and object.h

* Implement memory collection based on mmap()

* Improve the garbage collector using kernel information about dirty
  pages.

* Improve fixnum_times.

* #'unread-char does not fail when the character differs from the
  original one.

* vector-push-extend may succeed even if the vector is not
  adjustable. Should we be more strict?

* should we relax ASSOC? (See lists156.tst)

* boost setf and generalized places -- the current implementation is
  extremely faulty with respect to the standards.

* expand parse_namestring() to accept scaped strings, spaces, etc.

* Remove most property lists from standard symbols.

* Make the version with Boehm's GC and the version without it binary
  compatible.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:70 ***
;;; End: ***