@@ -45,9 +45,6 @@ AC_SUBST(infodir)
 AC_SUBST(builddir)
 AC_SUBST(top_srcdir)
 AC_SUBST(TKLIBS)
-AC_ARG_ENABLE(clos,
-	[  --disable-clos	  Don't include CLOS.],
-	clos=`test "$enable_clos" != "no"`, clos=1)
 AC_ARG_ENABLE(boehm,
 	[  --enable-boehm	  Enable Boehm & Weiser's garbage collector.],
 	boehm="$enable_boehm")
@@ -171,7 +168,6 @@ test "${boehm}" && CLIBS="-lgc ${CLIBS}"
 test "${boehm}" && AC_DEFINE(GBC_BOEHM)
 AC_MSG_CHECKING(for clos)
 AC_MSG_RESULT([${clos}])
-test "${clos}" && AC_DEFINE(CLOS)
 test "${tk}" && AC_DEFINE(TK)
 test "${clx}" && AC_DEFINE(CLX)
 test "${tcp}" -o "${clx}" && AC_DEFINE(TCP)
